force-app/main/default/objects/CustomerDataEvents__b/CustomerDataEvents__b.object-meta.xml
<CustomObject>
    <label>Customer Data Event</label>
    <pluralLabel>Customer Data Events</pluralLabel>
    <indexes>
        <fields>
            <name>CustomerId__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>EventTimestamp__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fullName>CustomerEventIndex</fullName>
        <label>Customer Event Index</label>
    </indexes>
</CustomObject>