force-app/main/default/objects/CustomerDataEvents__b/fields/EventId__c.field-meta.xml
<CustomField>
    <fullName>EventId__c</fullName>
    <label>Event ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>