force-app/main/default/objects/CustomerDataEvents__b/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <label>Event Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>